--- a/.azure-pipelines/templates/run-tests.yml
+++ b/.azure-pipelines/templates/run-tests.yml
@@ -14,6 +14,9 @@ steps:
 - ${{ if and(eq(parameters.test, 'true'), eq(parameters.coverage, 'true'), eq(parameters.force_base_package, 'false')) }}:
   - script: ddev test --cov --junit ${{ parameters.ddtrace_flag }} ${{ parameters.check }}
     displayName: 'Run Unit/Integration tests'
+  - script:
+      ./coverage --gcov --F ${{ parameters.check }} -f ${{ parameters.check }}/coverage.xml
+    displayName: 'Upload coverage data'
     env:
       CODECOV_TOKEN: $(CODECOV_TOKEN)
 
