--- a/istio/pyproject.toml
+++ b/istio/pyproject.toml
@@ -37,6 +37,9 @@ dynamic = [
 
 [project.optional-dependencies]
 deps = []
+tests = [
+    "requests-mock==1.4.0",
+]
 
 [project.urls]
 Source = "https://github.com/DataDog/integrations-core"
@@ -49,8 +52,6 @@ include = [
     "/datadog_checks",
     "/tests",
     "/manifest.json",
-    "/requirements-dev.txt",
-    "/tox.ini",
 ]
 
 [tool.hatch.build.targets.wheel]
